--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -15,6 +15,7 @@
 @ScaleConfFooterBlue:   #59c9e1;
 @ScaleConfCopyrightBlue:lighten(#59c9e1, 23.5%);
 @white:                 #ffffff;
+@black:                 #000000;
 
 
 // Grays
@@ -29,7 +30,7 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #428bca;
+@brand-primary:         @ScaleConfGreenBlue;
 @brand-success:         #5cb85c;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
@@ -44,8 +45,8 @@
 // Links
 // -------------------------
 
-@link-color:            @brand-primary;
-@link-hover-color:      darken(@link-color, 15%);
+@link-color:            @ScaleConfGreenBlue;
+@link-hover-color:      @ScaleConfGreenBlue;
 
 // Typography
 // -------------------------
@@ -56,7 +57,7 @@
 @font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          14px;
+@font-size-base:          13px;
 @font-size-large:         ceil(@font-size-base * 1.25); // ~18px
 @font-size-small:         ceil(@font-size-base * 0.85); // ~12px
 
