--- a/source/html/static/css/bootstrap.css
+++ b/source/html/static/css/bootstrap.css
@@ -804,8 +804,9 @@ h2{font-family:'Quicksand',sans-serif,Georgia,"Times New Roman",Times,serif;font
 h2.thanks{background-color:#f7941d;color:#ffffff;padding:8px;}
 h2.map{background-color:#0a3542;color:#ffffff;padding:8px;margin-bottom:0px;}
 h3{font-family:'Quicksand',sans-serif,Georgia,"Times New Roman",Times,serif;font-weight:normal;color:#59c9e1;margin:0px 0px 7px 0px;line-height:36px;font-size:28px;}
+h3.speaker{font-family:'Quicksand',sans-serif,Georgia,"Times New Roman",Times,serif;font-weight:normal;color:#59c9e1;margin:0px 0px 3px 0px;line-height:22px;font-size:16px;}
 h4{margin:25px 0px 4px 0px;font-family:geneva,sans-serif;font-weight:bold;font-size:14px;color:#317eac;text-rendering:optimizelegibility;}
-ul.list-inline li.box{display:inline-block;list-style:none;margin-bottom:20px;margin-right:20px;vertical-align:top;background-color:#f5f5f6;padding:15px;}
+ul.list-inline li.box{display:inline-block;list-style:none;margin-bottom:20px;margin-right:20px;vertical-align:top;background-color:#f5f5f6;padding:15px;width:97%;font-size:14px;font-family:'Quicksand',sans-serif,Georgia,"Times New Roman",Times,serif;}
 div.white-background{background-color:#ffffff;padding:0px 30px 20px 30px;}
 div.footer{background-color:#59c9e1;padding:10px 10px 10px 10px;color:#204e5e;font-size:13px;}
 div.copyright{background-color:#bfeaf3;padding:10px 10px 10px 10px;text-align:center;}
