--- a/source/less/scaleconf.less
+++ b/source/less/scaleconf.less
@@ -173,6 +173,15 @@ h3
     line-height: 36px;
     font-size: 28px;
 }
+h3.speaker
+{
+    font-family: @font-family-sans-serif;
+    font-weight: normal;
+    color: @ScaleConfFooterBlue;
+    margin: 0px 0px 3px 0px;
+    line-height: 22px;
+    font-size: 16px;
+}
 h4
 {
     margin: 25px 0px 4px 0px;
@@ -191,6 +200,9 @@ ul.list-inline li.box
     vertical-align: top;
     background-color: #f5f5f6;
     padding: 15px;
+    width: 97%;
+    font-size: 14px;
+    font-family: @font-family-sans-serif;
 }
 
 // ---------------------------------- layout coloring
