--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -12,6 +12,7 @@
 @ScaleConfBackground:   #0a3542;
 @ScaleConfMenuSelected: darken(@ScaleConfGreenBlue, 5.5%);
 @ScaleConfGray:         #7d7d7d;
+@ScaleConfColumnGray:   #f5f5f6;
 @ScaleConfFooterBlue:   #59c9e1;
 @ScaleConfCopyrightBlue:lighten(#59c9e1, 23.5%);
 @white:                 #ffffff;
@@ -103,7 +104,7 @@
 // Tables
 // -------------------------
 
-@table-cell-padding:                 8px;
+@table-cell-padding:                 12px;
 @table-condensed-cell-padding:       5px;
 
 @table-bg:                           transparent; // overall background-color
@@ -111,7 +112,7 @@
 @table-bg-hover:                     #f5f5f5;
 @table-bg-active:                    @table-bg-hover;
 
-@table-border-color:                 #ddd; // table and cell border
+@table-border-color:                 @white; // table and cell border
 
 
 // Buttons
