--- a/source/less/tables.less
+++ b/source/less/tables.less
@@ -9,6 +9,9 @@ table {
 }
 th {
   text-align: left;
+ font-family: @font-family-sans-serif;
+font-size: 15px;
+color: #204e5e;
 }
 
 
@@ -28,6 +31,7 @@ th {
         line-height: @line-height-base;
         vertical-align: top;
         border-top: 1px solid @table-border-color;
+        background-color: #f0eded;
       }
     }
   }
@@ -35,6 +39,10 @@ th {
   thead > tr > th {
     vertical-align: bottom;
     border-bottom: 2px solid @table-border-color;
+    border-right: 2px solid @table-border-color;
+    border-left: 2px solid @table-border-color;
+    background-color: #b9e7f3;
+    font-weight: normal;
   }
   // Remove top border from thead by default
   caption + thead,
@@ -79,14 +87,14 @@ th {
 // Add borders all around the table and between all the columns.
 
 .table-bordered {
-  border: 1px solid @table-border-color;
+  border: 2px solid @table-border-color;
   > thead,
   > tbody,
   > tfoot {
     > tr {
       > th,
       > td {
-        border: 1px solid @table-border-color;
+        border: 2px solid @table-border-color;
       }
     }
   }
