--- a/source/less/scaleconf.less
+++ b/source/less/scaleconf.less
@@ -325,3 +325,35 @@ div.gutter-padding-right
 {
     padding-right: 5px;
 }
+
+div.gray-background
+{
+    background-color: #f5f5f6;
+    padding: 20px 20px 20px 20px;
+}
+
+.pull-left-margin
+{
+    float: left;
+    margin-right: 5px;
+}
+
+div.padding-extra
+{
+    padding-bottom: 17px;
+}
+div.pull-right-margin
+{
+    padding-right: 30px;
+    float: right;
+}
+
+ul.padding-area li
+{
+    padding-left: 50px;
+    padding-right: 50px;
+}
+ul.padding-area
+{
+    margin: 20px 0px 20px 0px;
+}
